fix too long clickable on chackbox

--- a/webroot/css/ManTime/man.css
+++ b/webroot/css/ManTime/man.css
@@ -3,7 +3,7 @@
 }
 
 .checkboxU{
-    width: 350px !important;
+    width: 220px !important;
 }
 
 .height-input{
